# cosmonaut

./: Cargo.toml
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs
crates/server/src/message/: mod.rs
crates/server/src/user/: mod.rs
crates/server/src/world/: mod.rs
crates/server/tests/: world.rs
